Member Page Start

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -28,6 +28,7 @@
 .icon-justify:before { content: '\e81a'; } /* '' */
 .icon-combined:before { content: '\e81b'; } /* '' */
 .icon-minus:before { content: '\e81c'; } /* '' */
+.icon-download:before { content: '\e81d'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-exchange:before { content: '\f0ec'; } /* '' */
