--- a/style.scss
+++ b/style.scss
@@ -22,3 +22,7 @@
 @import "include/message.scss";
 
 @import "include/cart.scss";
+
+@import "include/popup.scss";
+
+@import "include/member.scss";
