--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?85947549');
-  src: url('../font/fontello.eot?85947549#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?85947549') format('woff2'),
-       url('../font/fontello.woff?85947549') format('woff'),
-       url('../font/fontello.ttf?85947549') format('truetype'),
-       url('../font/fontello.svg?85947549#fontello') format('svg');
+  src: url('../font/fontello.eot?9169519');
+  src: url('../font/fontello.eot?9169519#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?9169519') format('woff2'),
+       url('../font/fontello.woff?9169519') format('woff'),
+       url('../font/fontello.ttf?9169519') format('truetype'),
+       url('../font/fontello.svg?9169519#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?85947549#fontello') format('svg');
+    src: url('../font/fontello.svg?9169519#fontello') format('svg');
   }
 }
 */
@@ -84,6 +84,7 @@
 .icon-justify:before { content: '\e81a'; } /* '' */
 .icon-combined:before { content: '\e81b'; } /* '' */
 .icon-minus:before { content: '\e81c'; } /* '' */
+.icon-download:before { content: '\e81d'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-exchange:before { content: '\f0ec'; } /* '' */
