--- a/include/base.scss
+++ b/include/base.scss
@@ -6,7 +6,7 @@
 
 html {font-family: $font; font-size: 17px; line-height: 1.5; color: $color-2; -webkit-text-size-adjust: 100%; text-rendering: optimizeLegibility;}
 
-body {margin: 0px;}
+body {margin: 0px; overflow-x: hidden;}
 
 img {max-width: 100%;}
 
@@ -80,9 +80,15 @@ a.lnkUyeOlmak,
 
 .flex-direction-column {flex-direction: column;}
 
+.flex-1 {flex: 1;}
+
+.flex-2 {flex: 2;}
+
+.flex-3 {flex: 3;}
+
 // container
 
-.ems-container {max-width: 1200px; padding-left: 40px; padding-right: 40px; margin-left: auto; margin-right: auto; box-sizing: content-box;
+.ems-container {max-width: 1200px; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; box-sizing: content-box;
 
     &::before,
     &::after {clear: both;}
