--- a/include/header.scss
+++ b/include/header.scss
@@ -53,11 +53,17 @@
 
         .mod-mini-login {padding: 12px; position: relative;
 
+            .mod-mini-login-header {
+
+                > span {font-size: 14px;}
+
+            }
+
             .mod-mini-login-body {
         
                 .ems-form {opacity: 0; visibility: hidden; position: absolute; background-color: $color-3; z-index: 2; width: 290px; left: 0px; top: 52px; padding: 15px; border-radius: 3px; border-top-left-radius: 0px;}
             
-                .sub.login {position: absolute; top: 52px; left: 0; width: 290px; min-width: 170px; background: $color-3; z-index: 10; padding: 10px 15px; transition: all .2s ease; opacity: 0; visibility: hidden; overflow: hidden; border-radius: 3px; border-top-left-radius: 0px;
+                .sub.login {position: absolute; top: 51px; left: 0; width: 290px; min-width: 170px; background: $color-3; z-index: 10; padding: 10px 15px; transition: all .2s ease; opacity: 0; visibility: hidden; overflow: hidden; border-radius: 3px; border-top-left-radius: 0px;
                 
                     > * {line-height: 2;}
 
@@ -251,7 +257,7 @@
 
 // category
 
-.header-category {background-color: $color-3; position: absolute; top: 17px; left: 0px; width: 100%;
+.header-category {background-color: $color-3; position: absolute; top: 17px; left: 0px; width: 100%; z-index: 9;
 
     // title
 
@@ -335,7 +341,7 @@
 
 .sticky-header-ready {
 
-    .mod-mini-search {width: calc(100% - 275px); transition-delay: 0s;}
+    .mod-mini-search {width: calc(100% - 345px); transition-delay: 0s;}
 
     .member {top: 0px; transition-delay: 0.1s;}
 
