Product List & Product Detail Mobile Style add

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -29,6 +29,7 @@
 .icon-combined:before { content: '\e81b'; } /* '' */
 .icon-minus:before { content: '\e81c'; } /* '' */
 .icon-download:before { content: '\e81d'; } /* '' */
+.icon-funnel:before { content: '\e81e'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-exchange:before { content: '\f0ec'; } /* '' */
